src/objects/wbsendit__Subscription__c.object
<CustomObject>
    <description>Campaign Monitor List</description>
    <fields>
        <fullName>wbsendit__Compound_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>List Id + Email. Internal use only. This allows the use of upsert.</description>
        <externalId>true</externalId>
        <label>Compound Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>wbsendit__Consent_To_Track__c</fullName>
        <label>Consent To Track</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Subscriber List Memberships</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Date_Subscribed__c</fullName>
        <label>Date Subscribed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__Email__c</fullName>
        <inlineHelpText>Email the user subscribed on.</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>wbsendit__IP_Address__c</fullName>
        <inlineHelpText>IP Address the subscriber was on when signing up.</inlineHelpText>
        <label>IP Address</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Import_Source__c</fullName>
        <inlineHelpText>The source and Id of the CM Import. This will be populated if the record was added to CM via Salesforce.</inlineHelpText>
        <label>Import Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Job_Id__c</fullName>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Subscriber List Memberships</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__List_Id__c</fullName>
        <description>Internal use only. Contains the CM list id.</description>
        <label>List Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Preference__c</fullName>
        <label>Preference</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wbsendit__Reads_Email_With__c</fullName>
        <label>Reads Email With</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Segment_Codes__c</fullName>
        <label>Segment Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Suppressed</fullName>
                </value>
                <value>
                    <fullName>Unsubscribed</fullName>
                </value>
                <value>
                    <fullName>Bounced</fullName>
                </value>
                <value>
                    <fullName>Unconfirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Subscriber_Id__c</fullName>
        <externalId>true</externalId>
        <label>Subscriber Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Subscriber_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscriber List</label>
        <referenceTo>wbsendit__Subscriber_List__c</referenceTo>
        <relationshipLabel>Subscriber List Members</relationshipLabel>
        <relationshipName>Email_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Subscriber List Member</label>
    <listViews>
        <fullName>wbsendit__All</fullName>
        <columns>NAME</columns>
        <columns>wbsendit__Subscriber_List__c</columns>
        <columns>wbsendit__Date_Subscribed__c</columns>
        <columns>wbsendit__State__c</columns>
        <columns>wbsendit__Email__c</columns>
        <columns>wbsendit__Lead__c</columns>
        <columns>wbsendit__Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>wbsendit__Not_Linked</fullName>
        <columns>NAME</columns>
        <columns>wbsendit__Compound_Key__c</columns>
        <columns>wbsendit__Contact__c</columns>
        <columns>wbsendit__Date_Subscribed__c</columns>
        <columns>wbsendit__Email__c</columns>
        <columns>wbsendit__IP_Address__c</columns>
        <columns>wbsendit__Lead__c</columns>
        <columns>wbsendit__List_Id__c</columns>
        <columns>wbsendit__State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>wbsendit__Contact__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>wbsendit__Lead__c</field>
            <operation>equals</operation>
        </filters>
        <label>Not Linked</label>
    </listViews>
    <nameField>
        <label>Subscriber List Member</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscriber List Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>